<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">local</string>
    <string name="hello_world">Hello world!</string>
    <string name="previous">previous player</string>
    <string name="first">MainPage</string>
    <string name="page">view his webpage</string>
    <string name="back">back</string>
    <string name="moreinfo">other</string>
     <string name="normal">Normal</string>
    <string name="sattelite">Satellite</string>
    <string name="none">None</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
</resources>
